[package]
name = "airport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.2.0"
rand = "0.10.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.9"
toml = "0.8"
